<resources>
    <!-- Strings for Login Activity -->
    <string name="app_name">SmartDoor</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_trouble">Trouble scanning? Manually enter ID here</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_scan">Scan QR</string>
    <!-- Strings for Register Activity -->
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_raspberry_pi_id">Raspeberry Pi ID</string>
    <string name="title_activity_register">Smart Door</string>
    <!-- Strings for Timeline Activity -->
    <string name="display_title">Event Title</string>
    <string name="display_description">Description</string>
    <string name="display_time">00:00 - 01:00</string>
    <!-- Strings used for Testing -->
    <string name="action_timeline">Timeline</string>
    <string name="action_nfc">NFC</string>
    <string name="action_add_pi">Register PI</string>
    <string name="ping">Update Every ...</string>
    <string name="set_pi_name">Raspberry PI Name</string>
    <string name="pi_id">Raspberry PI ID</string>
    <string name="add_note">Add Note</string>
    <string name="nfc_send">SEND</string>
    <string name="login">LOGIN</string>
    <string name="register_title">REGISTER</string>
</resources>
