<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    style="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_username"
        android:id="@+id/tvUsernameEntry"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_below="@+id/tvUsernameEntry"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tvUsernameEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:id="@+id/tvPassword"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/tvPassword"
        android:password="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:id="@+id/bt_sign_in"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/bt_scan_qr"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/bt_sign_in"
        android:layout_alignEnd="@+id/bt_sign_in" />
</RelativeLayout>
