<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3f3f3f"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/listview_item"
        android:padding="10dp" >

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/event_icon"
                android:background="#ffffff"
                android:padding="10dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:padding="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/display_title"
                        android:id="@+id/dp_title"
                        android:layout_weight="0.93"
                        android:layout_marginLeft="5dp"
                        android:background="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/display_time"
                        android:padding="2dp"
                        android:textSize="15dp"
                        android:id="@+id/dp_time"
                        android:layout_gravity="right"
                        android:background="#ffffff" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_description"
                    android:id="@+id/dp_description"
                    android:textSize="10dp"
                    android:layout_marginLeft="5dp"
                    android:background="#ffffff" />
            </LinearLayout>
    </LinearLayout>
</LinearLayout>